feat: complete oauth2 success handler